# random-number

./: README.md
src/: .gitignore  Cargo.toml  dfx.json  private_key.pem  sh_add_operator.sh  sh_import_identity.sh  sh_init_function_call.sh  sh_post_container_created.sh
src/.devcontainer/: Dockerfile  devcontainer.json
src/random-num/: Cargo.toml  random_num.did  random_number.did
src/random-num/src/: main.rs  service.rs
