[package]
name = "stellaris_inscription_random_number"
version = "0.17.0"
license = "MIT"
authors = ["StellarisInscription Core Dev"]
edition = "2021"
description = "Random canister for game."
homepage = "https://github.com/StellarisInscription"
repository = "https://github.com/StellarisInscription/random-number"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "stellaris_inscription_random_number"
path = "src/main.rs"

[dependencies]
ic-cdk = "0.10"
ic-stable-structures = "0.6.1"
ic_principal = "0.1.1"
hex = { version = "0.4.3", features = ["serde"] }
crc32fast = "1.3.2"
candid = "0.9"
serde = "1.0"
serde_bytes = "0.11"
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.17"
log = "0.4"
